# rmf_reservation

./: Cargo.toml  readme.md  running_log.txt
.github/workflows/: rust.yml
data_analysis/: performance_discrete_vs_continous.ipynb  performance_plot.ipynb  performance_sat_with_heuristic_time_To_first_solution.ipynb
data_analysis/.ipynb_checkpoints/: performance_plot-checkpoint.ipynb
docs/: tutorial.md
examples/: benchmark.rs  charging_stations.rs  discrete_vs_nodiscrete.rs  fire_safety_kuhn_munkres.rs  fire_safety_no_cbs_heuristic.rs  integrated_planning.rs  rest_api.rs  rest_api_fixed_reservation.rs
src/: lib.rs
src/algorithms/: greedy_solver.rs  hierarchical_kuhn_munkres.rs  kuhn_munkres.rs  mod.rs  sat.rs  sat_flexible_time_model.rs
src/cost_function/: mod.rs  static_cost.rs  time_as_cost.rs
src/database/: mod.rs
src/discretization/: fixed_timestep.rs  minimal_samples.rs  mod.rs
src/scenario_generation/: mod.rs
src/utils/: mod.rs  multimap.rs  queue.rs
src/wait_points/: mod.rs  wait_points.rs
