[package]
name = "rmf_reservations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["unstable-locales", "serde", "rustc-serialize"] }
itertools = "0.10.5"
futures = "0.3"
serde = "1.0.164"
serde_derive = "1.0.164"
uuid = { version = "1.4.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
axum = { version = "0.6", features= ["macros"]}
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
axum-server = "0.5.1"
serde_json = "1.0.99"
mapf = { path = "/usr/local/google/home/arjoc/ws/mapf/mapf", features = ["serde"] }